--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "figma-design-replica",
+  "name": "witway",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -10,11 +10,20 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@ant-design/plots": "^2.3.2",
+    "@types/react-modal": "^3.16.3",
+    "@vis.gl/react-google-maps": "^1.2.0",
     "antd": "^5.20.6",
+    "dotenv": "^16.4.5",
+    "framer-motion": "^11.9.0",
+    "lottie-react": "^2.4.0",
     "react": "^18.3.1",
+    "react-apexcharts": "^1.4.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
-    "react-router-dom": "^6.26.2"
+    "react-modal": "^3.16.1",
+    "react-router-dom": "^6.26.2",
+    "valtio": "^2.0.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
