--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "framer-motion": "^11.9.0",
     "lottie-react": "^2.4.0",
     "react": "^18.3.1",
+    "apexcharts": "^3.41.0",
     "react-apexcharts": "^1.4.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
